--- a/Example/Lesson 3/Activity 3-3/stylesheet.css
+++ b/Example/Lesson 3/Activity 3-3/stylesheet.css
@@ -42,4 +42,11 @@ body {
   height: 200px;
   width: 100%;
   background-color: #025059;
+
+}
+
+.centered{
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
