--- a/css/style.css
+++ b/css/style.css
@@ -4,14 +4,17 @@ body {
 	line-height: 1.2;
 	max-width: 60rem;
 	margin: 0 auto;
-	background-color:darkgray;
+	background-color:darkgrey;
+
   list-style-type: none;
 }
 
 @media screen and (min-width:60em) {
 	body{
-
-		background-color: lightgray;
+		background-image: url("../images/background_side_left.jpg");
+		background-position: left;
+		background-repeat: repeat-y;
+		background-color: #700015;
   }
 }
 
@@ -24,7 +27,7 @@ body {
 @media screen and (min-width:50em) {
   header{
     display: table;
-		background-color: #abcdef;
+		background-color: #700015;
 		width:100%;
   }
 }
@@ -34,7 +37,7 @@ body {
 	header{
     display: flex;
 		flex-wrap:wrap;
-		background-color: #550000;
+		background-color: #700015;
 		width:100%;
   }
 }
@@ -54,15 +57,13 @@ body {
   .LogoWrapper{
     width:200px;
 		background-image: url('../images/RyanSteffesPhotographer.jpg');
-		max-width: 30%;
-    margin: 1em;
-		display: table-cell;
+		background-size: cover;
+		display: table;
   }
 }
 
 @media screen and (min-width:60em) {
   .LogoWrapper{
-		float:left;
 		background-image: url('../images/RyanSteffesPhotographer.jpg');
 		height:30vh;
 		margin:2vh;
@@ -79,12 +80,13 @@ body {
 
 @media screen and (min-width:60em) {
 	.PesonalInformation{
-			display: auto;
+			display: flex;
 			align-items: center;
+			width:65%;
 	}
 }
 
-.Resume
+main
 {
   display: relative;
   clear:both;
@@ -92,13 +94,14 @@ body {
 }
 
 @media screen and (min-width:60em) {
-.Resume
+main
 	{
 	  display: flex;
 		flex-wrap: wrap;
+		align-items: center;
 
 	}
-	.Resume>*
+	main>*
 	{
 		flex:1 1 500px;
 	}
@@ -108,7 +111,7 @@ img {
 	max-height: 250px;
 }
 
-.EntryTable
+section
 {
   	display: table;
     background-color: #abcdef;
@@ -117,7 +120,7 @@ img {
 }
 
 @media screen and (min-width:60em) {
-	.EntryTable
+	section
 	{
 	  	display: flex;
 			flex-wrap:wrap;
@@ -127,26 +130,11 @@ img {
 			justify-content: center;
 
 	}
-	.EntryTable>*
+	section>*
 	{
 		flex:1 1 25vw;
 	}
 }
-
-.Entry
-{
-  display: list-item;
-	padding: 10px;
-}
-
-@media screen and (min-width:60em) {
-	.Entry
-	{
-	  display: auto;
-
-	}
-}
-
 
 
 .EntryName
@@ -156,6 +144,7 @@ img {
   font-weight: bold;
   margin-top: 10px;
 	text-align: justify;
+	padding: 10px;
 }
 
 @media screen and (min-width:60em) {
@@ -189,12 +178,14 @@ img {
 .EntryDescription
 {
 	display: list-item;
-	width: 99%;
+	max-width: 95%;
 	overflow-x: hidden;
 	overflow: visible;
 	font-size:.9rem;
 	margin-left: 10px;
 	text-align: justify;
+	padding-bottom: 10px;
+	margin: 10px;
 }
 
 @media screen and (min-width:60em) {
@@ -226,4 +217,9 @@ img {
 	.Experience{
 		flex-basis: 100%;
 	}
+}
+
+.Hobbies>*
+{
+	padding-left:25px;
 }
