--- a/css/resume_style.css
+++ b/css/resume_style.css
@@ -13,7 +13,7 @@ header{
   height: 500px;
   width:100%;
   font-family: "Times New Roman", "Times", serif;
-  color:white;
+  color:var(--headlinecolor);
   background-image: url("../images/RyanSteffesPhotographer.jpg");
   background-position: center;
   background-size: cover;
