--- a/css/mainstyle.css
+++ b/css/mainstyle.css
@@ -16,6 +16,18 @@
   background-image: repeating-linear-gradient(120deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.1) 1px, transparent 1px, transparent 60px), repeating-linear-gradient(60deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.1) 1px, transparent 1px, transparent 60px), linear-gradient(60deg, rgba(0, 0, 0, 0.1) 25%, transparent 25%, transparent 75%, rgba(0, 0, 0, 0.1) 75%, rgba(0, 0, 0, 0.1)), linear-gradient(120deg, rgba(0, 0, 0, 0.1) 25%, transparent 25%, transparent 75%, rgba(0, 0, 0, 0.1) 75%, rgba(0, 0, 0, 0.1));
   background-size: 70px 120px; }
 
+  @media screen  and (max-width:1600px)
+  {
+  .div--flex-row, .div-flex-row-wrap {
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: column; }
+
+  .div-flex-row-wrap {
+    flex-wrap: wrap; }
+  }
+@media screen  and (min-width:1600px)
+{
 .div--flex-row, .div-flex-row-wrap {
   display: flex;
   flex-wrap: nowrap;
@@ -23,6 +35,7 @@
 
 .div-flex-row-wrap {
   flex-wrap: wrap; }
+}
 
 .div--flex-cols, .div-flex-cols-wrap {
   display: flex;
